Fixed css problem where side bar needs to span the full width on mobile devices

--- a/blocks/core/ff_container/ff_container-scrollable-list/ff_container-scrollable-list.less
+++ b/blocks/core/ff_container/ff_container-scrollable-list/ff_container-scrollable-list.less
@@ -36,5 +36,6 @@
         }
         overflow-y: auto;
         box-sizing: border-box;
+        width: 100%;
     }
 }
